--- a/src/pages/gear.astro
+++ b/src/pages/gear.astro
@@ -9,7 +9,9 @@ import PageLayout from "@/layouts/Base";
       "Explore the gear that enhances my productivity and creativity.",
   }}
 >
-  <section class="ml-8 sm:ml-8">
+  <section
+    class="max-w-4xl mx-auto px-4 py-4 rounded-lg bg-neutral-100 border-2 dark:border-neutral-700 dark:bg-neutral-900"
+  >
     <h1 class="title">Gear</h1>
     <h2 class="text">The tools I use.</h2>
     <ul class="space-y-10 md:space-y-2">
