--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -54,7 +54,7 @@ import aboutBackground from "../../public/about-bg.png";
   <section
     class="max-w-4xl mx-auto px-4 py-4 rounded-lg bg-neutral-100 border-2 dark:border-neutral-700 dark:bg-neutral-900"
   >
-    <h2 class="title mb-4 text-xl dark:text-neutral-300">About Jayden</h2>
+    <h2 class="title mb-4 text-xl dark:text-neutral-300">About</h2>
     <p class="text">
       I'm an Australian based technologist with a 10 year of experience in
       digital marketing and a 10 year of experience in software design and
@@ -64,7 +64,7 @@ import aboutBackground from "../../public/about-bg.png";
       <br />
       In my spare time, I respond to emergencies and fly drones commerically.
     </p>
-    <h3 class="title mb-4 text-xl dark:text-neutral-300">Career History</h3>
+    <h3 class="title mb-4 text-xl dark:text-neutral-300">CV</h3>
     <ul class="space-y-4 sm:space-y-2">
       <li class="flex flex-col gap-x-2 sm:flex-row">
         <span class="min-w-[120px]">Principal Consultant:</span>
