--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,9 +39,9 @@ const calendarLink = "https://calendar.app.google/vztyBAcNPxT1toUS8";
 >
   <section id="hero" class="text-center">
     <h1
-      class="text-4xl sm:text-5xl font-extrabold text-neutral-800 dark:text-neutral-400 mb-6 mt-4"
+      class="text-4xl sm:text-5xl font-extrabold text-neutral-800 dark:text-neutral-400 py-6"
     >
-      Scale without chaos.
+      I solve million dollar technology problems
     </h1>
     <p
       class="max-w-lg mx-auto text-lg text-neutral-600 dark:text-neutral-400 mb-8"
@@ -52,7 +52,7 @@ const calendarLink = "https://calendar.app.google/vztyBAcNPxT1toUS8";
 
     <a
       href={calendarLink}
-      class="inline-block rounded-md px-6 py-3 font-semibold border-2 border-neutral-300 dark:border-neutral-500 text-neutral-700 dark:text-neutral-400 bg-white dark:bg-neutral-800 hover:underline mb-8"
+      class="inline-block rounded-md px-6 py-3 font-semibold border-2 border-neutral-300 dark:border-neutral-500 text-neutral-700 dark:text-neutral-400 bg-white dark:bg-neutral-800 hover:underline mb-12"
     >
       Book An Intro Chat
     </a>
@@ -66,7 +66,7 @@ const calendarLink = "https://calendar.app.google/vztyBAcNPxT1toUS8";
           src={profile.src}
           alt="Profile"
         />
-        <p class="text-md max-w-md opacity-80 pt-1">
+        <p class="text-md max-w-md opacity-80 pb-12">
           I help ambitious founder-led businesses who’ve nailed their
           product-market fit but are stuck in operational bottlenecks. Together,
           we install systems, automation, and processes so you can double
@@ -120,17 +120,16 @@ const calendarLink = "https://calendar.app.google/vztyBAcNPxT1toUS8";
 
   <section id="pain" class="max-w-4xl mx-auto px-4 py-16 text-center">
     <h2 class="text-3xl font-bold text-neutral-800 dark:text-neutral-400 mb-6">
-      PMF isn't about "more hustle."
+      Work smarter not harder.
     </h2>
     <p class="text-lg text-neutral-600 dark:text-neutral-400 mb-8">
-      It's about removing the constraints that keep you stuck in firefighting
-      mode.
+      Remove the constraints that keep you stuck in firefighting mode.
     </p>
 
     <h3
       class="text-xl font-semibold text-neutral-700 dark:text-neutral-400 mb-4"
     >
-      Most founders at this stage:
+      Most founders at PMF:
     </h3>
     <ul class="space-y-4 text-neutral-600 dark:text-neutral-400">
       <li class="flex items-center justify-center gap-2">
@@ -181,7 +180,7 @@ const calendarLink = "https://calendar.app.google/vztyBAcNPxT1toUS8";
       The Method
     </h2>
     <p class="text-lg text-neutral-600 dark:text-neutral-400 mb-8">
-      I don't sell theory. I've been in your shoes.
+      I don't sell theory. <br />I've been in your shoes.
     </p>
 
     <div class="grid md:grid-cols-3 gap-8 mt-12">
