--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -46,7 +46,7 @@ import projectBackground from "../../public/project-bg.png";
   </section>
   <section class="grid gap-4 sm:gap-8 md:grid-cols-2 mt-4 sm:mt-0">
     <article
-      class="ml-4 mr-4 sm:ml-0 sm:mr-0 sm:rounded-xl rounded-none border bg-white dark:bg-neutral-900 border-neutral-200 p-8 dark:border-neutral-800"
+      class="sm:ml-0 sm:mr-0 sm:rounded-xl rounded-none border bg-white dark:bg-neutral-900 border-neutral-200 p-8 dark:border-neutral-800"
     >
       <div class="flex items-center gap-4 mb-4">
         <div
@@ -95,7 +95,7 @@ import projectBackground from "../../public/project-bg.png";
     </article>
 
     <article
-      class="ml-4 mr-4 sm:ml-0 sm:mr-0 sm:rounded-xl rounded-none border bg-white dark:bg-neutral-900 border-neutral-200 p-8 dark:border-neutral-800"
+      class="sm:ml-0 sm:mr-0 sm:rounded-xl rounded-none border bg-white dark:bg-neutral-900 border-neutral-200 p-8 dark:border-neutral-800"
     >
       <div class="flex items-center gap-4 mb-4">
         <div
@@ -144,7 +144,7 @@ import projectBackground from "../../public/project-bg.png";
     </article>
 
     <article
-      class="ml-4 mr-4 sm:ml-0 sm:mr-0 sm:rounded-xl rounded-none border bg-white dark:bg-neutral-900 border-neutral-200 p-8 dark:border-neutral-800"
+      class="sm:ml-0 sm:mr-0 sm:rounded-xl rounded-none border bg-white dark:bg-neutral-900 border-neutral-200 p-8 dark:border-neutral-800"
     >
       <div class="flex items-center gap-4 mb-4">
         <div
@@ -193,7 +193,7 @@ import projectBackground from "../../public/project-bg.png";
     </article>
 
     <article
-      class="ml-4 mr-4 sm:ml-0 sm:mr-0 sm:rounded-xl rounded-none border bg-white dark:bg-neutral-900 border-neutral-200 p-8 dark:border-neutral-800"
+      class="sm:ml-0 sm:mr-0 sm:rounded-xl rounded-none border bg-white dark:bg-neutral-900 border-neutral-200 p-8 dark:border-neutral-800"
     >
       <div class="flex items-center gap-4 mb-4">
         <div
