--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,7 +17,7 @@ import aboutBackground from "../../public/about-bg.png";
 
 <PageLayout meta={{ title: "About" }}>
   <section
-    class="relative -mt-6 overflow-hidden mx-auto text-center sm:pb-8 transition hover:filter-none dark:hover:grayscale-0 dark:grayscale"
+    class="relative sm:-mt-6 mt-6 overflow-hidden mx-auto text-center pb-6 transition hover:filter-none dark:hover:grayscale-0 dark:grayscale"
   >
     <div class="relative cursor-crosshair h-[320px]">
       <div
@@ -52,7 +52,7 @@ import aboutBackground from "../../public/about-bg.png";
     </div>
   </section>
   <section
-    class="max-w-4xl mx-auto px-4 py-4 rounded-lg bg-neutral-100 border-2 dark:border-neutral-700 dark:bg-neutral-900"
+    class="max-w-4xl mx-auto px-4 py-4 rounded-lg bg-neutral-100 border dark:border-neutral-800 dark:bg-neutral-900"
   >
     <h2 class="title mb-4 text-xl dark:text-neutral-300">About</h2>
     <p class="text">
