--- a/src/pages/gear.astro
+++ b/src/pages/gear.astro
@@ -10,61 +10,61 @@ import PageLayout from "@/layouts/Base";
   }}
 >
   <section
-    class="max-w-4xl mx-auto px-4 py-4 rounded-lg bg-neutral-100 border-2 dark:border-neutral-700 dark:bg-neutral-900"
+    class="max-w-4xl mx-auto px-4 py-4 rounded-lg bg-neutral-100 border dark:border-neutral-800 dark:bg-neutral-900"
   >
-    <h1 class="title">Gear</h1>
-    <h2 class="text">The tools I use.</h2>
+    <h1 class="title mb-4 text-xl dark:text-neutral-300">Gear</h1>
+    <h2 class="text">The tools that help me every day.</h2>
     <ul class="space-y-10 md:space-y-2">
       <li class="flex flex-col sm:flex-row items-start sm:items-center">
-        <span class="min-w-[120px] text-gray-500">Chair:</span>
+        <span class="min-w-[120px] text-neutral-600">Chair:</span>
         <span>
           <a class="cactus-link" href="/">Steelcase Leap 2</a>
         </span>
       </li>
       <li class="flex flex-col sm:flex-row items-start sm:items-center">
-        <span class="min-w-[120px] text-gray-500">Desk:</span>
+        <span class="min-w-[120px] text-neutral-600">Desk:</span>
         <span>
           <a class="cactus-link" href="/">Omnidesk</a>
         </span>
       </li>
       <li class="flex flex-col sm:flex-row items-start sm:items-center">
-        <span class="min-w-[120px] text-gray-500">Monitor:</span>
+        <span class="min-w-[120px] text-neutral-600">Monitor:</span>
         <span>
           <a class="cactus-link" href="/">Apple Studio Display</a>
         </span>
       </li>
       <li class="flex flex-col sm:flex-row items-start sm:items-center">
-        <span class="min-w-[120px] text-gray-500">Laptop:</span>
+        <span class="min-w-[120px] text-neutral-600">Laptop:</span>
         <span>
           <a class="cactus-link" href="/">M1 Macbook Pro 14</a>
         </span>
       </li>
       <li class="flex flex-col sm:flex-row items-start sm:items-center">
-        <span class="min-w-[120px] text-gray-500">Keyboard:</span>
+        <span class="min-w-[120px] text-neutral-600">Keyboard:</span>
         <span>
           <a class="cactus-link" href="/">Logitech MK950</a>
         </span>
       </li>
       <li class="flex flex-col sm:flex-row items-start sm:items-center">
-        <span class="min-w-[120px] text-gray-500">Mouse:</span>
+        <span class="min-w-[120px] text-neutral-600">Mouse:</span>
         <span>
           <a class="cactus-link" href="/">Logitech MX Master 3</a>
         </span>
       </li>
       <li class="flex flex-col sm:flex-row items-start sm:items-center">
-        <span class="min-w-[120px] text-gray-500">Camera:</span>
+        <span class="min-w-[120px] text-neutral-600">Camera:</span>
         <span>
           <a class="cactus-link" href="/">Sony A7C | G Master Lenses</a>
         </span>
       </li>
       <li class="flex flex-col sm:flex-row items-start sm:items-center">
-        <span class="min-w-[120px] text-gray-500">Speakers:</span>
+        <span class="min-w-[120px] text-neutral-600">Speakers:</span>
         <span>
           <a class="cactus-link" href="/">PreSonus Eris Studio 5</a>
         </span>
       </li>
       <li class="flex flex-col sm:flex-row items-start sm:items-center">
-        <span class="min-w-[120px] text-gray-500">Headphones:</span>
+        <span class="min-w-[120px] text-neutral-600">Headphones:</span>
         <span>
           <a class="cactus-link" href="/">Sennheiser HD650</a>
         </span>
